test/types/file/invalidMode.good
invalidMode.chpl:2: error: unresolved enumerated type symbol or call 'type iomode.q'
